[package]
name = "oblivc"
version = "0.1.0"
authors = ["Phillipp Schoppmann <schoppmann@informatik.hu-berlin.de>"]
description = "Wrapper for Obliv-C"
license = "AGPL-3.0"
readme = "README.md"
repository = "https://github.com/schoppmp/oblivc-rust"
homepage = "https://github.com/schoppmp/oblivc-rust"
categories = ["api-bindings"]

[dependencies]
libobliv-sys = { path = "libobliv-sys", version = "0.1.2" }
cc = "1.0"
lazy_static = "1.0.0"
bindgen = "0.31.3"

[build-dependencies]
libobliv-sys = { path = "libobliv-sys", version = "0.1.2" }

[workspace]
members = ["libobliv-sys", "test-oblivc"]
