[package]
name = "libobliv-sys"
version = "0.1.0"
authors = ["Phillipp Schoppmann <schoppmann@informatik.hu-berlin.de>"]
description = "Raw bindings for Obliv-C"
license = "AGPL-3.0"
repository = "https://github.com/schoppmp/oblivc-rust"
homepage = "https://github.com/schoppmp/oblivc-rust"
categories = ["external-ffi-bindings"]
links = "obliv"

[lib]
name = "libobliv_sys"
path = "src/lib.rs"

[dependencies]
libgcrypt-sys = "0.5.4"
libgpg-error-sys = "0.2.3"

[build-dependencies]
walkdir = "2"
bindgen = "0.26.3"
